@@ -19,32 +19,31 @@
 
 package by.iba.vfapi.services;
 
+import by.iba.vfapi.config.ApplicationConfigurationProperties;
 import by.iba.vfapi.config.MailSenderConfig;
 import by.iba.vfapi.dao.PipelineHistoryRepository;
 import by.iba.vfapi.dto.Constants;
 import by.iba.vfapi.dto.history.PipelineHistoryResponseDto;
 import by.iba.vfapi.dto.history.PipelineNodesHistoryResponseDto;
 import by.iba.vfapi.dto.pipelines.CronPipelineDto;
+import by.iba.vfapi.dto.pipelines.PipelineDto;
 import by.iba.vfapi.dto.pipelines.PipelineOverviewDto;
 import by.iba.vfapi.dto.pipelines.PipelineOverviewListDto;
-import by.iba.vfapi.dto.pipelines.PipelineResponseDto;
 import by.iba.vfapi.dto.projects.ParamsDto;
 import by.iba.vfapi.exceptions.BadRequestException;
 import by.iba.vfapi.exceptions.InternalProcessingException;
 import by.iba.vfapi.model.argo.Arguments;
 import by.iba.vfapi.model.argo.CronWorkflow;
 import by.iba.vfapi.model.argo.CronWorkflowSpec;
-import by.iba.vfapi.model.argo.DagTask;
-import by.iba.vfapi.model.argo.DagTemplate;
 import by.iba.vfapi.model.argo.NodeStatus;
 import by.iba.vfapi.model.argo.Parameter;
-import by.iba.vfapi.model.argo.PipelineParams;
 import by.iba.vfapi.model.argo.Template;
 import by.iba.vfapi.model.argo.Workflow;
 import by.iba.vfapi.model.argo.WorkflowSpec;
 import by.iba.vfapi.model.argo.WorkflowStatus;
 import by.iba.vfapi.model.argo.WorkflowTemplate;
 import by.iba.vfapi.model.argo.WorkflowTemplateSpec;
+import by.iba.vfapi.model.argo.*;
 import by.iba.vfapi.model.auth.UserInfo;
 import by.iba.vfapi.model.history.AbstractHistory;
 import by.iba.vfapi.model.history.PipelineHistory;
@@ -52,132 +51,114 @@ import by.iba.vfapi.model.history.PipelineNodeHistory;
 import by.iba.vfapi.model.notifications.EmailNotification;
 import by.iba.vfapi.model.notifications.SlackNotification;
 import by.iba.vfapi.services.auth.AuthenticationService;
+import by.iba.vfapi.services.utils.K8sUtils;
+import by.iba.vfapi.services.utils.ParamUtils;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.argoproj.workflow.ApiException;
 import io.argoproj.workflow.apis.WorkflowServiceApi;
-import io.argoproj.workflow.models.WorkflowResumeRequest;
-import io.argoproj.workflow.models.WorkflowRetryRequest;
-import io.argoproj.workflow.models.WorkflowStopRequest;
-import io.argoproj.workflow.models.WorkflowSuspendRequest;
-import io.argoproj.workflow.models.WorkflowTerminateRequest;
+import io.argoproj.workflow.models.*;
 import io.fabric8.kubernetes.api.model.ConfigMap;
-import io.fabric8.kubernetes.api.model.ConfigMapBuilder;
-import io.fabric8.kubernetes.api.model.ObjectMetaBuilder;
-import io.fabric8.kubernetes.api.model.Quantity;
-import io.fabric8.kubernetes.api.model.ResourceQuota;
-import io.fabric8.kubernetes.api.model.ResourceQuotaStatus;
-import io.fabric8.kubernetes.api.model.Secret;
-import io.fabric8.kubernetes.api.model.SecretBuilder;
+import io.fabric8.kubernetes.api.model.*;
 import io.fabric8.kubernetes.client.ResourceNotFoundException;
-import java.io.IOException;
-import java.util.Collections;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
-import java.util.LinkedList;
-import java.util.HashMap;
-import java.util.stream.Collectors;
-import java.util.Set;
-import java.util.stream.Stream;
-
 import org.apache.commons.codec.binary.Base64;
+import org.apache.commons.lang3.SerializationUtils;
 import org.joda.time.DateTime;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.context.properties.EnableConfigurationProperties;
 import org.springframework.boot.json.JsonParseException;
+import org.springframework.boot.test.context.ConfigDataApplicationContextInitializer;
+import org.springframework.test.context.ContextConfiguration;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 
-import static by.iba.vfapi.dto.Constants.NODE_TYPE_POD;
-import static by.iba.vfapi.dto.Constants.PIPELINE_HISTORY;
-import static by.iba.vfapi.dto.Constants.PIPELINE_NODE_HISTORY;
-import static by.iba.vfapi.services.K8sUtils.FAILED_STATUS;
-import static by.iba.vfapi.services.K8sUtils.RUNNING_STATUS;
-import static by.iba.vfapi.services.K8sUtils.SUSPENDED_STATUS;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
+import java.io.IOException;
+import java.util.*;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
-@ExtendWith(MockitoExtension.class)
+import static by.iba.vfapi.dto.Constants.*;
+import static by.iba.vfapi.services.utils.K8sUtils.*;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.*;
+import static org.mockito.Mockito.*;
+
+@ExtendWith({MockitoExtension.class, SpringExtension.class})
+@ContextConfiguration(initializers = ConfigDataApplicationContextInitializer.class)
+@EnableConfigurationProperties(value = ApplicationConfigurationProperties.class)
 class PipelineServiceTest {
     private static JsonNode GRAPH;
 
     static {
         try {
             GRAPH = new ObjectMapper().readTree("{\n" +
-                                                    "  \"graph\": [\n" +
-                                                    "    {\n" +
-                                                    "      \"value\": {\n" +
-                                                    "        \"jobId\": \"cm1\",\n" +
-                                                    "        \"name\": \"testJob\",\n" +
-                                                    "        \"operation\": \"JOB\"\n" +
-                                                    "      },\n" +
-                                                    "      \"id\": \"jRjFu5yR\",\n" +
-                                                    "      \"vertex\": true\n" +
-                                                    "    },\n" +
-                                                    "    {\n" +
-                                                    "      \"value\": {\n" +
-                                                    "        \"jobId\": \"cm2\",\n" +
-                                                    "        \"name\": \"testJob2\",\n" +
-                                                    "        \"operation\": \"JOB\"\n" +
-                                                    "      },\n" +
-                                                    "      \"id\": \"cyVyU8Xfw\",\n" +
-                                                    "      \"vertex\": true\n" +
-                                                    "    },\n" +
-                                                    "    {\n" +
-                                                    "      \"value\": {\n" +
-                                                    "        \"name\": \"testWait\",\n" +
-                                                    "        \"operation\": \"WAIT\"\n" +
-                                                    "      },\n" +
-                                                    "      \"id\": \"Mdy6eqsd\",\n" +
-                                                    "      \"vertex\": true\n" +
-                                                    "    },\n" +
-                                                    "    {\n" +
-                                                    "      \"value\": {\n" +
-                                                    "        \"jobId\": \"cm3\",\n" +
-                                                    "        \"name\": \"testJob3\",\n" +
-                                                    "        \"operation\": \"JOB\"\n" +
-                                                    "      },\n" +
-                                                    "      \"id\": \"ydFdss83s\",\n" +
-                                                    "      \"vertex\": true\n" +
-                                                    "    },\n" +
-                                                    "    {\n" +
-                                                    "      \"value\": {\n" +
-                                                    "        \"successPath\": true,\n" +
-                                                    "        \"operation\": \"EDGE\"\n" +
-                                                    "      },\n" +
-                                                    "      \"source\": \"jRjFu5yR\",\n" +
-                                                    "      \"target\": \"cyVyU8Xfw\"\n" +
-                                                    "    },\n" +
-                                                    "    {\n" +
-                                                    "      \"value\": {\n" +
-                                                    "        \"successPath\": true,\n" +
-                                                    "        \"operation\": \"EDGE\"\n" +
-                                                    "      },\n" +
-                                                    "      \"source\": \"cyVyU8Xfw\",\n" +
-                                                    "      \"target\": \"Mdy6eqsd\"\n" +
-                                                    "    },\n" +
-                                                    "    {\n" +
-                                                    "      \"value\": {\n" +
-                                                    "        \"successPath\": true,\n" +
-                                                    "        \"operation\": \"EDGE\"\n" +
-                                                    "      },\n" +
-                                                    "      \"source\": \"Mdy6eqsd\",\n" +
-                                                    "      \"target\": \"ydFdss83s\"\n" +
-                                                    "    }\n" +
-                                                    "  ]\n" +
-                                                    "}");
+                    "  \"graph\": [\n" +
+                    "    {\n" +
+                    "      \"value\": {\n" +
+                    "        \"jobId\": \"cm1\",\n" +
+                    "        \"name\": \"testJob\",\n" +
+                    "        \"operation\": \"JOB\"\n" +
+                    "      },\n" +
+                    "      \"id\": \"jRjFu5yR\",\n" +
+                    "      \"vertex\": true\n" +
+                    "    },\n" +
+                    "    {\n" +
+                    "      \"value\": {\n" +
+                    "        \"jobId\": \"cm2\",\n" +
+                    "        \"name\": \"testJob2\",\n" +
+                    "        \"operation\": \"JOB\"\n" +
+                    "      },\n" +
+                    "      \"id\": \"cyVyU8Xfw\",\n" +
+                    "      \"vertex\": true\n" +
+                    "    },\n" +
+                    "    {\n" +
+                    "      \"value\": {\n" +
+                    "        \"name\": \"testWait\",\n" +
+                    "        \"operation\": \"WAIT\"\n" +
+                    "      },\n" +
+                    "      \"id\": \"Mdy6eqsd\",\n" +
+                    "      \"vertex\": true\n" +
+                    "    },\n" +
+                    "    {\n" +
+                    "      \"value\": {\n" +
+                    "        \"jobId\": \"cm3\",\n" +
+                    "        \"name\": \"testJob3\",\n" +
+                    "        \"operation\": \"JOB\"\n" +
+                    "      },\n" +
+                    "      \"id\": \"ydFdss83s\",\n" +
+                    "      \"vertex\": true\n" +
+                    "    },\n" +
+                    "    {\n" +
+                    "      \"value\": {\n" +
+                    "        \"successPath\": true,\n" +
+                    "        \"operation\": \"EDGE\"\n" +
+                    "      },\n" +
+                    "      \"source\": \"jRjFu5yR\",\n" +
+                    "      \"target\": \"cyVyU8Xfw\"\n" +
+                    "    },\n" +
+                    "    {\n" +
+                    "      \"value\": {\n" +
+                    "        \"successPath\": true,\n" +
+                    "        \"operation\": \"EDGE\"\n" +
+                    "      },\n" +
+                    "      \"source\": \"cyVyU8Xfw\",\n" +
+                    "      \"target\": \"Mdy6eqsd\"\n" +
+                    "    },\n" +
+                    "    {\n" +
+                    "      \"value\": {\n" +
+                    "        \"successPath\": true,\n" +
+                    "        \"operation\": \"EDGE\"\n" +
+                    "      },\n" +
+                    "      \"source\": \"Mdy6eqsd\",\n" +
+                    "      \"target\": \"ydFdss83s\"\n" +
+                    "    }\n" +
+                    "  ]\n" +
+                    "}");
         } catch (JsonProcessingException e) {
             e.printStackTrace();
         }
@@ -196,38 +177,27 @@ class PipelineServiceTest {
     @Mock
     private WorkflowServiceApi apiInstance;
     private PipelineService pipelineService;
-
-    private final MailSenderConfig mailSenderConfig = new MailSenderConfig("username",
-            "password",
-            "smtp",
-            "host",
-            587,
-            "true",
-            "auth",
-            "test",
-            "true");
+    @Mock
+    private ValidatorService validatorService;
     @Mock
     private PipelineHistoryRepository<? extends AbstractHistory> pipelineHistoryRepository;
+    @Autowired
+    private ApplicationConfigurationProperties appProperties;
 
     @BeforeEach
     void setUp() {
-        this.pipelineService = new PipelineService("sparkImage",
-            "sparkMaster",
-            "spark",
-            "pullSecret",
-            "pvcMountPath",
-            "jobConfigMountPath",
-            "host",
-            "notificationImage",
-            "botToken",
-            mailSenderConfig,
-            argoKubernetesService,
-            projectService,
-            apiInstance,
-            workflowService,
-            authenticationService,
-            dependencyHandlerService,
-            pipelineHistoryRepository);
+        MailSenderConfig mailSenderConfig = new MailSenderConfig(appProperties);
+        this.pipelineService = new PipelineService(
+                mailSenderConfig,
+                argoKubernetesService,
+                projectService,
+                apiInstance,
+                workflowService,
+                authenticationService,
+                dependencyHandlerService,
+                pipelineHistoryRepository,
+                appProperties,
+                validatorService);
     }
 
     @Test
@@ -239,27 +209,27 @@ class PipelineServiceTest {
         ConfigMap configMap =
                 new ConfigMapBuilder().withNewMetadata().withName("name").endMetadata().withData(res).build();
         doNothing()
-            .when(argoKubernetesService)
-            .createOrReplaceWorkflowTemplate(eq("projectId"), any(WorkflowTemplate.class));
+                .when(argoKubernetesService)
+                .createOrReplaceWorkflowTemplate(eq("projectId"), any(WorkflowTemplate.class));
         when(argoKubernetesService.getConfigMap(anyString(), anyString())).thenReturn(configMap);
-        when(projectService.getParams(anyString())).thenReturn(ParamsDto.fromSecret(new Secret()).build());
+        when(projectService.getParams(anyString())).thenReturn(ParamUtils.fromSecret(new Secret()).build());
 
         pipelineService.create("projectId", "name", GRAPH,
                 PipelineParams.builder()
-                    .tags(Arrays.asList("VF-Demo", "VF-Migration"))
-                    .slack(SlackNotification.builder()
-                            .successNotify(false)
-                            .failureNotify(false)
-                            .channels(List.of())
-                            .recipients(List.of())
-                            .build())
-                    .email(EmailNotification.builder()
-                            .successNotify(true)
-                            .failureNotify(false)
-                            .recipients(List.of("test@test.com"))
-                            .build())
-                    .dependentPipelineIds(Set.of())
-                .build());
+                        .tags(Arrays.asList("VF-Demo", "VF-Migration"))
+                        .slack(SlackNotification.builder()
+                                .successNotify(false)
+                                .failureNotify(false)
+                                .channels(List.of())
+                                .recipients(List.of())
+                                .build())
+                        .email(EmailNotification.builder()
+                                .successNotify(true)
+                                .failureNotify(false)
+                                .recipients(List.of("test@test.com"))
+                                .build())
+                        .dependentPipelineIds(Set.of())
+                        .build());
 
         verify(argoKubernetesService).createOrReplaceWorkflowTemplate(anyString(), any(WorkflowTemplate.class));
     }
@@ -268,18 +238,18 @@ class PipelineServiceTest {
     void testCreateWithPipelineStage() throws JsonProcessingException {
         JsonNode GRAPH_PIPELINE = new ObjectMapper().readTree(
                 "{\n" +
-                "  \"graph\": [\n" +
-                "    {\n" +
-                "      \"value\": {\n" +
-                "        \"pipelineId\": \"pl1\",\n" +
-                "        \"name\": \"testPipeline\",\n" +
-                "        \"operation\": \"PIPELINE\"\n" +
-                "      },\n" +
-                "      \"id\": \"3\",\n" +
-                "      \"vertex\": true\n" +
-                "    }\n" +
-                "  ]\n" +
-                "}");
+                        "  \"graph\": [\n" +
+                        "    {\n" +
+                        "      \"value\": {\n" +
+                        "        \"pipelineId\": \"pl1\",\n" +
+                        "        \"name\": \"testPipeline\",\n" +
+                        "        \"operation\": \"PIPELINE\"\n" +
+                        "      },\n" +
+                        "      \"id\": \"3\",\n" +
+                        "      \"vertex\": true\n" +
+                        "    }\n" +
+                        "  ]\n" +
+                        "}");
 
         WorkflowTemplate workflowTemplate = new WorkflowTemplate();
         workflowTemplate.setMetadata(new ObjectMetaBuilder()
@@ -319,8 +289,7 @@ class PipelineServiceTest {
         doNothing()
                 .when(argoKubernetesService)
                 .createOrReplaceWorkflowTemplate(eq("projectId"), any(WorkflowTemplate.class));
-        when(argoKubernetesService.isWorkflowTemplateExist(anyString(), anyString())).thenReturn(true);
-        when(projectService.getParams(anyString())).thenReturn(ParamsDto.fromSecret(new Secret()).build());
+        when(projectService.getParams(anyString())).thenReturn(ParamUtils.fromSecret(new Secret()).build());
 
         pipelineService.create("projectId", "name", GRAPH_PIPELINE,
                 PipelineParams.builder()
@@ -349,42 +318,42 @@ class PipelineServiceTest {
                 .thenThrow(new ResourceNotFoundException(""));
 
         doNothing()
-            .when(argoKubernetesService)
-            .createOrReplaceWorkflowTemplate(eq("projectId"), any(WorkflowTemplate.class));
-        when(projectService.getParams(anyString())).thenReturn(ParamsDto.fromSecret(new Secret()).build());
+                .when(argoKubernetesService)
+                .createOrReplaceWorkflowTemplate(eq("projectId"), any(WorkflowTemplate.class));
+        when(projectService.getParams(anyString())).thenReturn(ParamUtils.fromSecret(new Secret()).build());
 
         pipelineService.create("projectId",
-                               "name",
-                               new ObjectMapper().readTree("{\"graph\": [\n" +
-                                                               "      {\n" +
-                                                               "        \"value\": {\n" +
-                                                               "          \"name\": " +
-                                                               "\"example_container_stage" +
-                                                               "\",\n" +
-                                                               "          \"image\": \"imageLink\",\n" +
-                                                               "          \"imagePullPolicy" +
-                                                               "\": \"Always\",\n" +
-                                                               "\"mountProjectParams\": " +
-                                                               "\"true\",\n" +
-                                                               "          \"limitsCpu\": " +
-                                                               "\"1\",\n" +
-                                                               "          \"requestsCpu\": " +
-                                                               "\"1\",\n" +
-                                                               "          \"limitsMemory\":" +
-                                                               " \"1\",\n" +
-                                                               "          " +
-                                                               "\"requestsMemory\": \"1\"," +
-                                                               "\n" +
-                                                               "          " +
-                                                               "\"imagePullSecretType\": " +
-                                                               "\"NOT_APPLICABLE\",\n" +
-                                                               "          \"operation\": " +
-                                                               "\"CONTAINER\"\n" +
-                                                               "        },\n" +
-                                                               "        \"id\": \"2\",\n" +
-                                                               "        \"vertex\": true\n" +
-                                                               "      }]}"),
-                    PipelineParams.builder()
+                "name",
+                new ObjectMapper().readTree("{\"graph\": [\n" +
+                        "      {\n" +
+                        "        \"value\": {\n" +
+                        "          \"name\": " +
+                        "\"example_container_stage" +
+                        "\",\n" +
+                        "          \"image\": \"imageLink\",\n" +
+                        "          \"imagePullPolicy" +
+                        "\": \"Always\",\n" +
+                        "\"mountProjectParams\": " +
+                        "\"true\",\n" +
+                        "          \"limitsCpu\": " +
+                        "\"1\",\n" +
+                        "          \"requestsCpu\": " +
+                        "\"1\",\n" +
+                        "          \"limitsMemory\":" +
+                        " \"1\",\n" +
+                        "          " +
+                        "\"requestsMemory\": \"1\"," +
+                        "\n" +
+                        "          " +
+                        "\"imagePullSecretType\": " +
+                        "\"NOT_APPLICABLE\",\n" +
+                        "          \"operation\": " +
+                        "\"CONTAINER\"\n" +
+                        "        },\n" +
+                        "        \"id\": \"2\",\n" +
+                        "        \"vertex\": true\n" +
+                        "      }]}"),
+                PipelineParams.builder()
                         .tags(Arrays.asList("VF-Demo", "VF-Migration"))
                         .slack(SlackNotification.builder()
                                 .successNotify(false)
@@ -410,44 +379,44 @@ class PipelineServiceTest {
                 .thenThrow(new ResourceNotFoundException(""));
 
         doNothing()
-            .when(argoKubernetesService)
-            .createOrReplaceWorkflowTemplate(eq("projectId"), any(WorkflowTemplate.class));
-        when(projectService.getParams(anyString())).thenReturn(ParamsDto.fromSecret(new Secret()).build());
+                .when(argoKubernetesService)
+                .createOrReplaceWorkflowTemplate(eq("projectId"), any(WorkflowTemplate.class));
+        when(projectService.getParams(anyString())).thenReturn(ParamUtils.fromSecret(new Secret()).build());
         pipelineService.create("projectId",
-                               "name",
-                               new ObjectMapper().readTree("{\"graph\": [\n" +
-                                                               "      {\n" +
-                                                               "        \"value\": {\n" +
-                                                               "          \"name\": " +
-                                                               "\"example_container_stage" +
-                                                               "\",\n" +
-                                                               "          \"image\": \"imageLink\",\n" +
-                                                               "          \"imagePullPolicy" +
-                                                               "\": \"Always\",\n" +
-                                                               "          \"command\": " +
-                                                               "\"echo Hello World!\",\n" +
-                                                               "          " +
-                                                               "\"mountProjectParams\": " +
-                                                               "\"true\",\n" +
-                                                               "          \"limitsCpu\": " +
-                                                               "\"1\",\n" +
-                                                               "          \"requestsCpu\": " +
-                                                               "\"1\",\n" +
-                                                               "          \"limitsMemory\":" +
-                                                               " \"1\",\n" +
-                                                               "          " +
-                                                               "\"requestsMemory\": \"1\"," +
-                                                               "\n" +
-                                                               "          " +
-                                                               "\"imagePullSecretType\": " +
-                                                               "\"NOT_APPLICABLE\",\n" +
-                                                               "          \"operation\": " +
-                                                               "\"CONTAINER\"\n" +
-                                                               "        },\n" +
-                                                               "        \"id\": \"2\",\n" +
-                                                               "        \"vertex\": true\n" +
-                                                               "      }]}"),
-                    PipelineParams.builder()
+                "name",
+                new ObjectMapper().readTree("{\"graph\": [\n" +
+                        "      {\n" +
+                        "        \"value\": {\n" +
+                        "          \"name\": " +
+                        "\"example_container_stage" +
+                        "\",\n" +
+                        "          \"image\": \"imageLink\",\n" +
+                        "          \"imagePullPolicy" +
+                        "\": \"Always\",\n" +
+                        "          \"command\": " +
+                        "\"echo Hello World!\",\n" +
+                        "          " +
+                        "\"mountProjectParams\": " +
+                        "\"true\",\n" +
+                        "          \"limitsCpu\": " +
+                        "\"1\",\n" +
+                        "          \"requestsCpu\": " +
+                        "\"1\",\n" +
+                        "          \"limitsMemory\":" +
+                        " \"1\",\n" +
+                        "          " +
+                        "\"requestsMemory\": \"1\"," +
+                        "\n" +
+                        "          " +
+                        "\"imagePullSecretType\": " +
+                        "\"NOT_APPLICABLE\",\n" +
+                        "          \"operation\": " +
+                        "\"CONTAINER\"\n" +
+                        "        },\n" +
+                        "        \"id\": \"2\",\n" +
+                        "        \"vertex\": true\n" +
+                        "      }]}"),
+                PipelineParams.builder()
                         .tags(Arrays.asList("VF-Demo", "VF-Migration"))
                         .slack(SlackNotification.builder()
                                 .successNotify(false)
@@ -472,50 +441,50 @@ class PipelineServiceTest {
                 .thenThrow(new ResourceNotFoundException(""));
 
         doNothing()
-            .when(argoKubernetesService)
-            .createOrReplaceWorkflowTemplate(eq("projectId"), any(WorkflowTemplate.class));
-        when(projectService.getParams(anyString())).thenReturn(ParamsDto.fromSecret(new Secret()).build());
+                .when(argoKubernetesService)
+                .createOrReplaceWorkflowTemplate(eq("projectId"), any(WorkflowTemplate.class));
+        when(projectService.getParams(anyString())).thenReturn(ParamUtils.fromSecret(new Secret()).build());
         when(argoKubernetesService.getSecret(anyString(),
-                                             anyString())).thenThrow(new ResourceNotFoundException(""));
+                anyString())).thenThrow(new ResourceNotFoundException(""));
         pipelineService.create("projectId",
-                               "name",
-                               new ObjectMapper().readTree("{\"graph\": [\n" +
-                                                               "      {\n" +
-                                                               "        \"value\": {\n" +
-                                                               "          \"name\": " +
-                                                               "\"example_container_stage" +
-                                                               "\",\n" +
-                                                               "          \"image\": \"testRegistry/testImage\"," +
-                                                               "\n" +
-                                                               "          \"imagePullPolicy" +
-                                                               "\": \"Always\",\n" +
-                                                               "\"mountProjectParams\": " +
-                                                               "\"true\",\n" +
-                                                               "          \"limitsCpu\": " +
-                                                               "\"1\",\n" +
-                                                               "          \"requestsCpu\": " +
-                                                               "\"1\",\n" +
-                                                               "          \"limitsMemory\":" +
-                                                               " \"1\",\n" +
-                                                               "          " +
-                                                               "\"requestsMemory\": \"1\"," +
-                                                               "\n" +
-                                                               "          " +
-                                                               "\"imagePullSecretType\": " +
-                                                               "\"NEW\",\n" +
-                                                               "          \"username\": " +
-                                                               "\"test_user\",\n" +
-                                                               "          \"password\": " +
-                                                               "\"test_pw\",\n" +
-                                                               "          \"registry\": " +
-                                                               "\"testRegistry\",\n" +
-                                                               "          \"operation\": " +
-                                                               "\"CONTAINER\"\n" +
-                                                               "        },\n" +
-                                                               "        \"id\": \"2\",\n" +
-                                                               "        \"vertex\": true\n" +
-                                                               "      }]}"),
-                    PipelineParams.builder()
+                "name",
+                new ObjectMapper().readTree("{\"graph\": [\n" +
+                        "      {\n" +
+                        "        \"value\": {\n" +
+                        "          \"name\": " +
+                        "\"example_container_stage" +
+                        "\",\n" +
+                        "          \"image\": \"testRegistry/testImage\"," +
+                        "\n" +
+                        "          \"imagePullPolicy" +
+                        "\": \"Always\",\n" +
+                        "\"mountProjectParams\": " +
+                        "\"true\",\n" +
+                        "          \"limitsCpu\": " +
+                        "\"1\",\n" +
+                        "          \"requestsCpu\": " +
+                        "\"1\",\n" +
+                        "          \"limitsMemory\":" +
+                        " \"1\",\n" +
+                        "          " +
+                        "\"requestsMemory\": \"1\"," +
+                        "\n" +
+                        "          " +
+                        "\"imagePullSecretType\": " +
+                        "\"NEW\",\n" +
+                        "          \"username\": " +
+                        "\"test_user\",\n" +
+                        "          \"password\": " +
+                        "\"test_pw\",\n" +
+                        "          \"registry\": " +
+                        "\"testRegistry\",\n" +
+                        "          \"operation\": " +
+                        "\"CONTAINER\"\n" +
+                        "        },\n" +
+                        "        \"id\": \"2\",\n" +
+                        "        \"vertex\": true\n" +
+                        "      }]}"),
+                PipelineParams.builder()
                         .tags(Arrays.asList("VF-Demo", "VF-Migration"))
                         .slack(SlackNotification.builder()
                                 .successNotify(false)
@@ -540,51 +509,51 @@ class PipelineServiceTest {
                 .thenThrow(new ResourceNotFoundException(""));
 
         doNothing()
-            .when(argoKubernetesService)
-            .createOrReplaceWorkflowTemplate(eq("projectId"), any(WorkflowTemplate.class));
-        when(projectService.getParams(anyString())).thenReturn(ParamsDto.fromSecret(new Secret()).build());
-        when(argoKubernetesService.isSecretExist(anyString(),anyString())).thenReturn(true);
+                .when(argoKubernetesService)
+                .createOrReplaceWorkflowTemplate(eq("projectId"), any(WorkflowTemplate.class));
+        when(projectService.getParams(anyString())).thenReturn(ParamUtils.fromSecret(new Secret()).build());
+        when(argoKubernetesService.isSecretExist(anyString(), anyString())).thenReturn(true);
         when(argoKubernetesService.getSecret(eq("projectId"), eq("existingSecret"))).thenReturn(new SecretBuilder()
-                                                                                                    .withNewMetadata()
-                                                                                                    .withNamespace(
-                                                                                                        "projectId")
-                                                                                                    .endMetadata()
-                                                                                                    .build());
+                .withNewMetadata()
+                .withNamespace(
+                        "projectId")
+                .endMetadata()
+                .build());
         pipelineService.create("projectId",
-                               "name",
-                               new ObjectMapper().readTree("{\"graph\": [\n" +
-                                                               "      {\n" +
-                                                               "        \"value\": {\n" +
-                                                               "          \"name\": " +
-                                                               "\"example_container_stage" +
-                                                               "\",\n" +
-                                                               "          \"image\": \"testRegistry/testImage\"," +
-                                                               "\n" +
-                                                               "          \"imagePullPolicy" +
-                                                               "\": \"Always\",\n" +
-                                                               "\"mountProjectParams\": " +
-                                                               "\"true\",\n" +
-                                                               "          \"limitsCpu\": " +
-                                                               "\"1\",\n" +
-                                                               "          \"requestsCpu\": " +
-                                                               "\"1\",\n" +
-                                                               "          \"limitsMemory\":" +
-                                                               " \"1\",\n" +
-                                                               "          " +
-                                                               "\"requestsMemory\": \"1\"," +
-                                                               "\n" +
-                                                               "          " +
-                                                               "\"imagePullSecretType\": " +
-                                                               "\"PROVIDED\",\n" +
-                                                               "          \"imagePullSecretName\": " +
-                                                               "\"existingSecret\",\n" +
-                                                               "          \"operation\": " +
-                                                               "\"CONTAINER\"\n" +
-                                                               "        },\n" +
-                                                               "        \"id\": \"2\",\n" +
-                                                               "        \"vertex\": true\n" +
-                                                               "      }]}"),
-                    PipelineParams.builder()
+                "name",
+                new ObjectMapper().readTree("{\"graph\": [\n" +
+                        "      {\n" +
+                        "        \"value\": {\n" +
+                        "          \"name\": " +
+                        "\"example_container_stage" +
+                        "\",\n" +
+                        "          \"image\": \"testRegistry/testImage\"," +
+                        "\n" +
+                        "          \"imagePullPolicy" +
+                        "\": \"Always\",\n" +
+                        "\"mountProjectParams\": " +
+                        "\"true\",\n" +
+                        "          \"limitsCpu\": " +
+                        "\"1\",\n" +
+                        "          \"requestsCpu\": " +
+                        "\"1\",\n" +
+                        "          \"limitsMemory\":" +
+                        " \"1\",\n" +
+                        "          " +
+                        "\"requestsMemory\": \"1\"," +
+                        "\n" +
+                        "          " +
+                        "\"imagePullSecretType\": " +
+                        "\"PROVIDED\",\n" +
+                        "          \"imagePullSecretName\": " +
+                        "\"existingSecret\",\n" +
+                        "          \"operation\": " +
+                        "\"CONTAINER\"\n" +
+                        "        },\n" +
+                        "        \"id\": \"2\",\n" +
+                        "        \"vertex\": true\n" +
+                        "      }]}"),
+                PipelineParams.builder()
                         .tags(Arrays.asList("VF-Demo", "VF-Migration"))
                         .slack(SlackNotification.builder()
                                 .successNotify(true)
@@ -606,51 +575,51 @@ class PipelineServiceTest {
     @Test
     void testCreateNotUniqueName() {
         when(argoKubernetesService.getWorkflowTemplatesByLabels("projectId",
-                                                                Map.of(Constants.NAME,
-                                                                       "name"))).thenReturn(List.of(new WorkflowTemplate(),
-                                                                                                    new WorkflowTemplate()));
+                Map.of(Constants.NAME,
+                        "name"))).thenReturn(List.of(new WorkflowTemplate(),
+                new WorkflowTemplate()));
         assertThrows(BadRequestException.class,
-                     () -> pipelineService.create("projectId", "name", GRAPH,
-                             PipelineParams.builder()
-                                     .tags(Arrays.asList("VF-Demo", "VF-Migration"))
-                                     .slack(SlackNotification.builder()
-                                             .successNotify(false)
-                                             .failureNotify(false)
-                                             .channels(List.of())
-                                             .recipients(List.of())
-                                             .build())
-                                     .email(EmailNotification.builder()
-                                             .successNotify(false)
-                                             .failureNotify(false)
-                                             .recipients(List.of())
-                                             .build())
-                                     .dependentPipelineIds(Set.of())
-                                     .build()),
-                     "Expected exception must be thrown");
+                () -> pipelineService.create("projectId", "name", GRAPH,
+                        PipelineParams.builder()
+                                .tags(Arrays.asList("VF-Demo", "VF-Migration"))
+                                .slack(SlackNotification.builder()
+                                        .successNotify(false)
+                                        .failureNotify(false)
+                                        .channels(List.of())
+                                        .recipients(List.of())
+                                        .build())
+                                .email(EmailNotification.builder()
+                                        .successNotify(false)
+                                        .failureNotify(false)
+                                        .recipients(List.of())
+                                        .build())
+                                .dependentPipelineIds(Set.of())
+                                .build()),
+                "Expected exception must be thrown");
 
 
         verify(argoKubernetesService, never()).createOrReplaceWorkflowTemplate(anyString(),
-                                                                               any(WorkflowTemplate.class));
+                any(WorkflowTemplate.class));
     }
 
     @Test
     void testGetById() throws IOException {
         WorkflowTemplate workflowTemplate = new WorkflowTemplate();
         CronWorkflow cronWorkflow = new CronWorkflow();
-        CronWorkflowSpec cronWorkflowSpec =new CronWorkflowSpec();
+        CronWorkflowSpec cronWorkflowSpec = new CronWorkflowSpec();
         cronWorkflowSpec.setSuspend(true);
         cronWorkflow.setSpec(cronWorkflowSpec);
         workflowTemplate.setMetadata(new ObjectMetaBuilder()
-                                         .withName("id")
-                                         .addToLabels(Constants.NAME, "name")
-                                         .addToAnnotations(Constants.DEFINITION,
-                                                           Base64.encodeBase64String(GRAPH.toString().getBytes()))
-                                         .addToAnnotations(Constants.LAST_MODIFIED, "lastModified")
-                                         .build());
+                .withName("id")
+                .addToLabels(Constants.NAME, "name")
+                .addToAnnotations(Constants.DEFINITION,
+                        Base64.encodeBase64String(GRAPH.toString().getBytes()))
+                .addToAnnotations(Constants.LAST_MODIFIED, "lastModified")
+                .build());
         workflowTemplate.setSpec(new WorkflowTemplateSpec().templates(List.of(new Template()
-                                                                                  .name("dagTemplate")
-                                                                                  .dag(new DagTemplate().addTasksItem(
-                                                                                      new DagTask())))));
+                .name("dagTemplate")
+                .dag(new DagTemplate().addTasksItem(
+                        new DagTask())))));
 
         when(argoKubernetesService.getWorkflowTemplate("projectId", "id"))
                 .thenReturn(workflowTemplate);
@@ -659,22 +628,25 @@ class PipelineServiceTest {
         when(argoKubernetesService.getCronWorkflow("projectId", "id")).thenReturn(cronWorkflow);
         when(argoKubernetesService.isCronWorkflowReadyOrExist("projectId", "id")).thenReturn(true);
         when(argoKubernetesService.isAccessible("projectId",
-                                                "workflowtemplates",
-                                                "argoproj.io",
-                                                Constants.UPDATE_ACTION)).thenReturn(true);
+                "workflowtemplates",
+                "argoproj.io",
+                Constants.UPDATE_ACTION)).thenReturn(true);
         when(argoKubernetesService.isAccessible("projectId",
-                                                "workflows",
-                                                "argoproj.io",
-                                                Constants.CREATE_ACTION)).thenReturn(true);
+                "workflows",
+                "argoproj.io",
+                Constants.CREATE_ACTION)).thenReturn(true);
 
-        PipelineResponseDto expected = ((PipelineResponseDto) new PipelineResponseDto()
-            .id("id")
-            .name("name")
-            .lastModified("lastModified")
-            .status("Draft")
-            .cron(true)
-            .cronSuspend(true)
-            .runnable(true)).definition(new ObjectMapper().readTree(GRAPH.toString().getBytes())).editable(true);
+        PipelineDto expected = PipelineDto.builder()
+                .id("id")
+                .name("name")
+                .lastModified("lastModified")
+                .status("Draft")
+                .cron(true)
+                .cronSuspend(true)
+                .runnable(true)
+                .definition(new ObjectMapper().readTree(GRAPH.toString().getBytes()))
+                .editable(true)
+                .build();
 
         assertEquals(expected, pipelineService.getById("projectId", "id"),
                 "Pipeline must be equals to expected");
@@ -701,25 +673,25 @@ class PipelineServiceTest {
         WorkflowTemplate workflowTemplate = new WorkflowTemplate();
 
         workflowTemplate.setMetadata(new ObjectMetaBuilder()
-                                         .withName("id1")
-                                         .addToLabels(Constants.NAME, "name1")
-                                         .addToAnnotations(Constants.DEFINITION,
-                                                           Base64.encodeBase64String(GRAPH.toString().getBytes()))
-                                         .addToAnnotations(Constants.LAST_MODIFIED, "lastModified")
-                                         .build());
+                .withName("id1")
+                .addToLabels(Constants.NAME, "name1")
+                .addToAnnotations(Constants.DEFINITION,
+                        Base64.encodeBase64String(GRAPH.toString().getBytes()))
+                .addToAnnotations(Constants.LAST_MODIFIED, "lastModified")
+                .build());
         DagTemplate dagTemplate = new DagTemplate();
         dagTemplate.setTasks(List.of(new DagTask()
-                                         .arguments(new Arguments().addParametersItem(new Parameter()
-                                                                                          .name("graphId")
-                                                                                          .value("1")))
-                                         .name("pipeline")
-                                         .template("sparkTemplate"),
-                                     new DagTask()
-                                         .arguments(new Arguments().addParametersItem(new Parameter()
-                                                                                          .name("graphId")
-                                                                                          .value("2")))
-                                         .name("pipeline-2681521834")
-                                         .template("notificationTemplate")));
+                        .arguments(new Arguments().addParametersItem(new Parameter()
+                                .name("graphId")
+                                .value("1")))
+                        .name("pipeline")
+                        .template("sparkTemplate"),
+                new DagTask()
+                        .arguments(new Arguments().addParametersItem(new Parameter()
+                                .name("graphId")
+                                .value("2")))
+                        .name("pipeline-2681521834")
+                        .template("notificationTemplate")));
         workflowTemplate.setSpec(new WorkflowTemplateSpec()
                 .pipelineParams(
                         PipelineParams.builder()
@@ -759,47 +731,46 @@ class PipelineServiceTest {
         nodeStatus2.setFinishedAt(DateTime.parse("2021-10-28T07:37:46Z"));
         nodeStatus2.setTemplateName("notificationTemplate");
         nodeStatus2.setType(NODE_TYPE_POD);
-        status.setNodes(List
-                            .of(nodeStatus1, nodeStatus2)
-                            .stream()
-                            .collect(Collectors.toMap(NodeStatus::getDisplayName, ns -> ns)));
+        status.setNodes(Stream.of(nodeStatus1, nodeStatus2)
+                .collect(Collectors.toMap(NodeStatus::getDisplayName, ns -> ns)));
         status.setStoredTemplates(Map.of("dagTemplate",
-                                         new Template()
-                                             .name(Constants.DAG_TEMPLATE_NAME)
-                                             .dag(dagTemplate)
-                                             .name("dagTemplate"),
-                                         "notificationTemplate",
-                                         new Template().name(PipelineService.NOTIFICATION_TEMPLATE_NAME),
-                                         "sparkTemplate",
-                                         new Template().name(PipelineService.SPARK_TEMPLATE_NAME)));
+                new Template()
+                        .name(Constants.DAG_TEMPLATE_NAME)
+                        .dag(dagTemplate)
+                        .name("dagTemplate"),
+                "notificationTemplate",
+                new Template().name(PipelineService.NOTIFICATION_TEMPLATE_NAME),
+                "sparkTemplate",
+                new Template().name(PipelineService.SPARK_TEMPLATE_NAME)));
         workflow.setStatus(status);
 
         when(argoKubernetesService.getAllWorkflowTemplates("projectId")).thenReturn(workflowTemplates);
         when(argoKubernetesService.getWorkflow("projectId", "id1")).thenReturn(workflow);
         when(argoKubernetesService.isAccessible("projectId",
-                                                "workflowtemplates",
-                                                "argoproj.io",
-                                                Constants.UPDATE_ACTION)).thenReturn(true);
+                "workflowtemplates",
+                "argoproj.io",
+                Constants.UPDATE_ACTION)).thenReturn(true);
         when(argoKubernetesService.isAccessible("projectId",
-                                                "workflows",
-                                                "argoproj.io",
-                                                Constants.CREATE_ACTION)).thenReturn(true);
+                "workflows",
+                "argoproj.io",
+                Constants.CREATE_ACTION)).thenReturn(true);
 
         PipelineOverviewListDto pipelines = pipelineService.getAll("projectId");
 
-        PipelineOverviewDto expected = new PipelineOverviewDto()
-            .id("id1")
-            .name("name1")
-            .lastModified("lastModified")
-            .startedAt("2020-10-27 10:14:46 +0000")
-            .finishedAt("2020-10-27 10:14:46 +0000")
-            .status("Running")
-            .progress(0.0f)
-            .cron(false)
-            .runnable(true)
-            .jobsStatuses(Map.of("1", "Running", "2", "Pending"))
-            .dependentPipelineIds(List.of())
-            .tags(List.of("value1"));
+        PipelineOverviewDto expected = PipelineOverviewDto.builder()
+                .id("id1")
+                .name("name1")
+                .lastModified("lastModified")
+                .startedAt("2020-10-27 10:14:46 +0000")
+                .finishedAt("2020-10-27 10:14:46 +0000")
+                .status("Running")
+                .progress(0.0f)
+                .cron(false)
+                .runnable(true)
+                .jobsStatuses(Map.of("1", "Running", "2", "Pending"))
+                .dependentPipelineIds(Set.of())
+                .tags(List.of("value1"))
+                .build();
 
         assertEquals(expected, pipelines.getPipelines().get(0), "Pipeline must be equals to expected");
         assertTrue(pipelines.isEditable(), "Must be true");
@@ -811,24 +782,24 @@ class PipelineServiceTest {
 
         DagTemplate dagTemplate = new DagTemplate();
         dagTemplate.setTasks(List.of(new DagTask()
-                                         .arguments(new Arguments().addParametersItem(new Parameter()
-                                                                                          .name("graphId")
-                                                                                          .value("1")))
-                                         .name("pipeline")
-                                         .template("sparkTemplate"),
-                                     new DagTask()
-                                         .arguments(new Arguments().addParametersItem(new Parameter()
-                                                                                          .name("graphId")
-                                                                                          .value("2")))
-                                         .name("pipeline-2681521834")
-                                         .template("notificationTemplate")));
+                        .arguments(new Arguments().addParametersItem(new Parameter()
+                                .name("graphId")
+                                .value("1")))
+                        .name("pipeline")
+                        .template("sparkTemplate"),
+                new DagTask()
+                        .arguments(new Arguments().addParametersItem(new Parameter()
+                                .name("graphId")
+                                .value("2")))
+                        .name("pipeline-2681521834")
+                        .template("notificationTemplate")));
         workflowTemplate.setMetadata(new ObjectMetaBuilder()
-                                         .withName("id1")
-                                         .addToLabels(Constants.NAME, "name1")
-                                         .addToAnnotations(Constants.DEFINITION,
-                                                           Base64.encodeBase64String(GRAPH.toString().getBytes()))
-                                         .addToAnnotations(Constants.LAST_MODIFIED, "lastModified")
-                                         .build());
+                .withName("id1")
+                .addToLabels(Constants.NAME, "name1")
+                .addToAnnotations(Constants.DEFINITION,
+                        Base64.encodeBase64String(GRAPH.toString().getBytes()))
+                .addToAnnotations(Constants.LAST_MODIFIED, "lastModified")
+                .build());
         workflowTemplate.setSpec(new WorkflowTemplateSpec()
                 .pipelineParams(
                         PipelineParams.builder()
@@ -854,7 +825,7 @@ class PipelineServiceTest {
         List<WorkflowTemplate> workflowTemplates = List.of(workflowTemplate);
         Workflow workflow = new Workflow();
         CronWorkflow cronWorkflow = new CronWorkflow();
-        CronWorkflowSpec cronWorkflowSpec =new CronWorkflowSpec();
+        CronWorkflowSpec cronWorkflowSpec = new CronWorkflowSpec();
         cronWorkflowSpec.setSuspend(true);
         cronWorkflow.setSpec(cronWorkflowSpec);
         WorkflowStatus status = new WorkflowStatus();
@@ -874,17 +845,17 @@ class PipelineServiceTest {
         nodeStatus2.setTemplateName("notificationTemplate");
         nodeStatus2.setType(NODE_TYPE_POD);
         status.setNodes(Stream
-                            .of(nodeStatus1, nodeStatus2)
-                            .collect(Collectors.toMap(NodeStatus::getDisplayName, ns -> ns)));
+                .of(nodeStatus1, nodeStatus2)
+                .collect(Collectors.toMap(NodeStatus::getDisplayName, ns -> ns)));
         status.setStoredTemplates(Map.of("dagTemplate",
-                                         new Template()
-                                             .name(Constants.DAG_TEMPLATE_NAME)
-                                             .dag(dagTemplate)
-                                             .name("dagTemplate"),
-                                         "notificationTemplate",
-                                         new Template().name(PipelineService.NOTIFICATION_TEMPLATE_NAME),
-                                         "sparkTemplate",
-                                         new Template().name(PipelineService.SPARK_TEMPLATE_NAME)));
+                new Template()
+                        .name(Constants.DAG_TEMPLATE_NAME)
+                        .dag(dagTemplate)
+                        .name("dagTemplate"),
+                "notificationTemplate",
+                new Template().name(PipelineService.NOTIFICATION_TEMPLATE_NAME),
+                "sparkTemplate",
+                new Template().name(PipelineService.SPARK_TEMPLATE_NAME)));
         workflow.setStatus(status);
 
         when(argoKubernetesService.getAllWorkflowTemplates("projectId")).thenReturn(workflowTemplates);
@@ -892,29 +863,30 @@ class PipelineServiceTest {
         when(argoKubernetesService.getCronWorkflow("projectId", "id1")).thenReturn(cronWorkflow);
         when(argoKubernetesService.isCronWorkflowReadyOrExist("projectId", "id1")).thenReturn(true);
         when(argoKubernetesService.isAccessible("projectId",
-                                                "workflowtemplates",
-                                                "argoproj.io",
-                                                Constants.UPDATE_ACTION)).thenReturn(true);
+                "workflowtemplates",
+                "argoproj.io",
+                Constants.UPDATE_ACTION)).thenReturn(true);
         when(argoKubernetesService.isAccessible("projectId",
-                                                "workflows",
-                                                "argoproj.io",
-                                                Constants.CREATE_ACTION)).thenReturn(true);
+                "workflows",
+                "argoproj.io",
+                Constants.CREATE_ACTION)).thenReturn(true);
         PipelineOverviewListDto pipelines = pipelineService.getAll("projectId");
 
-        PipelineOverviewDto expected = new PipelineOverviewDto()
-            .id("id1")
-            .name("name1")
-            .lastModified("lastModified")
-            .startedAt("2020-10-27 10:14:46 +0000")
-            .finishedAt("2020-10-27 10:14:46 +0000")
-            .status("Running")
-            .progress(0.0f)
-            .runnable(true)
-            .jobsStatuses(Map.of("1", "Running", "2", "Pending"))
-            .cron(true)
-            .cronSuspend(true)
-            .tags(List.of("value1"))
-            .dependentPipelineIds(List.of());
+        PipelineOverviewDto expected = PipelineOverviewDto.builder()
+                .id("id1")
+                .name("name1")
+                .lastModified("lastModified")
+                .startedAt("2020-10-27 10:14:46 +0000")
+                .finishedAt("2020-10-27 10:14:46 +0000")
+                .status("Running")
+                .progress(0.0f)
+                .runnable(true)
+                .jobsStatuses(Map.of("1", "Running", "2", "Pending"))
+                .cron(true)
+                .cronSuspend(true)
+                .tags(List.of("value1"))
+                .dependentPipelineIds(Set.of())
+                .build();
 
         assertEquals(expected, pipelines.getPipelines().get(0), "Pipeline must be equals to expected");
         assertTrue(pipelines.isEditable(), "Must be true");
@@ -924,12 +896,12 @@ class PipelineServiceTest {
     void testGetAllInProjectWithoutWorkflow() {
         WorkflowTemplate workflowTemplate = new WorkflowTemplate();
         workflowTemplate.setMetadata(new ObjectMetaBuilder()
-                                         .withName("id1")
-                                         .addToLabels(Constants.NAME, "name1")
-                                         .addToAnnotations(Constants.DEFINITION,
-                                                           Base64.encodeBase64String(GRAPH.toString().getBytes()))
-                                         .addToAnnotations(Constants.LAST_MODIFIED, "lastModified")
-                                         .build());
+                .withName("id1")
+                .addToLabels(Constants.NAME, "name1")
+                .addToAnnotations(Constants.DEFINITION,
+                        Base64.encodeBase64String(GRAPH.toString().getBytes()))
+                .addToAnnotations(Constants.LAST_MODIFIED, "lastModified")
+                .build());
         workflowTemplate.setSpec(new WorkflowTemplateSpec()
                 .pipelineParams(
                         PipelineParams.builder()
@@ -958,25 +930,26 @@ class PipelineServiceTest {
         when(argoKubernetesService.getWorkflow("projectId", "id1"))
                 .thenThrow(ResourceNotFoundException.class);
         when(argoKubernetesService.isAccessible("projectId",
-                                                "workflowtemplates",
-                                                "argoproj.io",
-                                                Constants.UPDATE_ACTION)).thenReturn(true);
+                "workflowtemplates",
+                "argoproj.io",
+                Constants.UPDATE_ACTION)).thenReturn(true);
         when(argoKubernetesService.isAccessible("projectId",
-                                                "workflows",
-                                                "argoproj.io",
-                                                Constants.CREATE_ACTION)).thenReturn(true);
+                "workflows",
+                "argoproj.io",
+                Constants.CREATE_ACTION)).thenReturn(true);
 
         PipelineOverviewListDto pipelines = pipelineService.getAll("projectId");
 
-        PipelineOverviewDto expected = new PipelineOverviewDto()
-            .id("id1")
-            .name("name1")
-            .status("Draft")
-            .lastModified("lastModified")
-            .cron(false)
-            .runnable(true)
-            .tags(List.of("value1"))
-            .dependentPipelineIds(List.of());
+        PipelineOverviewDto expected = PipelineOverviewDto.builder()
+                .id("id1")
+                .name("name1")
+                .status("Draft")
+                .lastModified("lastModified")
+                .cron(false)
+                .runnable(true)
+                .tags(List.of("value1"))
+                .dependentPipelineIds(Set.of())
+                .build();
 
         assertEquals(expected, pipelines.getPipelines().get(0), "Pipeline must be equals to expected");
         assertTrue(pipelines.isEditable(), "Must be true");
@@ -990,12 +963,12 @@ class PipelineServiceTest {
         cronWorkflowSpec.setSuspend(true);
         cronWorkflow.setSpec(cronWorkflowSpec);
         workflowTemplate.setMetadata(new ObjectMetaBuilder()
-                                         .withName("id1")
-                                         .addToLabels(Constants.NAME, "name1")
-                                         .addToAnnotations(Constants.DEFINITION,
-                                                           Base64.encodeBase64String(GRAPH.toString().getBytes()))
-                                         .addToAnnotations(Constants.LAST_MODIFIED, "lastModified")
-                                         .build());
+                .withName("id1")
+                .addToLabels(Constants.NAME, "name1")
+                .addToAnnotations(Constants.DEFINITION,
+                        Base64.encodeBase64String(GRAPH.toString().getBytes()))
+                .addToAnnotations(Constants.LAST_MODIFIED, "lastModified")
+                .build());
         workflowTemplate.setSpec(new WorkflowTemplateSpec()
                 .templates(List.of(new Template()
                         .name("dagTemplate")
@@ -1026,26 +999,27 @@ class PipelineServiceTest {
         when(argoKubernetesService.getCronWorkflow("projectId", "id1")).thenReturn(cronWorkflow);
         when(argoKubernetesService.isCronWorkflowReadyOrExist("projectId", "id1")).thenReturn(true);
         when(argoKubernetesService.isAccessible("projectId",
-                                                "workflowtemplates",
-                                                "argoproj.io",
-                                                Constants.UPDATE_ACTION)).thenReturn(true);
+                "workflowtemplates",
+                "argoproj.io",
+                Constants.UPDATE_ACTION)).thenReturn(true);
         when(argoKubernetesService.isAccessible("projectId",
-                                                "workflows",
-                                                "argoproj.io",
-                                                Constants.CREATE_ACTION)).thenReturn(true);
+                "workflows",
+                "argoproj.io",
+                Constants.CREATE_ACTION)).thenReturn(true);
 
         PipelineOverviewListDto pipelines = pipelineService.getAll("projectId");
 
-        PipelineOverviewDto expected = new PipelineOverviewDto()
-            .id("id1")
-            .name("name1")
-            .status("Draft")
-            .lastModified("lastModified")
-            .runnable(true)
-            .cron(true)
-            .cronSuspend(true)
-            .tags(Collections.emptyList())
-            .dependentPipelineIds(List.of("pl1"));
+        PipelineOverviewDto expected = PipelineOverviewDto.builder()
+                .id("id1")
+                .name("name1")
+                .status("Draft")
+                .lastModified("lastModified")
+                .runnable(true)
+                .cron(true)
+                .cronSuspend(true)
+                .tags(Collections.emptyList())
+                .dependentPipelineIds(Set.of("pl1"))
+                .build();
 
         assertEquals(expected, pipelines.getPipelines().get(0), "Pipeline must be equals to expected");
         assertTrue(pipelines.isEditable(), "Must be true");
@@ -1054,14 +1028,14 @@ class PipelineServiceTest {
     @Test
     void testUpdate() {
         doNothing()
-            .when(argoKubernetesService)
-            .createOrReplaceWorkflowTemplate(eq("projectId"), any(WorkflowTemplate.class));
+                .when(argoKubernetesService)
+                .createOrReplaceWorkflowTemplate(eq("projectId"), any(WorkflowTemplate.class));
         Map<String, String> res =
                 Map.of("DRIVER_CORES", "1", "DRIVER_MEMORY", "1G", "DRIVER_REQUEST_CORES", "0.1");
         ConfigMap configMap =
                 new ConfigMapBuilder().withNewMetadata().withName("name").endMetadata().withData(res).build();
         when(argoKubernetesService.getConfigMap(anyString(), anyString())).thenReturn(configMap);
-        when(projectService.getParams(anyString())).thenReturn(ParamsDto.fromSecret(new Secret()).build());
+        when(projectService.getParams(anyString())).thenReturn(ParamUtils.fromSecret(new Secret()).build());
 
         WorkflowTemplate workflowTemplate = new WorkflowTemplate();
         workflowTemplate.setMetadata(new ObjectMetaBuilder()
@@ -1093,7 +1067,7 @@ class PipelineServiceTest {
                         .name(Constants.DAG_TEMPLATE_NAME)
                         .dag(new DagTemplate()))));
 
-        PipelineParams params =  PipelineParams.builder()
+        PipelineParams params = PipelineParams.builder()
                 .tags(Arrays.asList("VF-Demo", "VF-Migration"))
                 .slack(SlackNotification.builder()
                         .successNotify(false)
@@ -1109,7 +1083,7 @@ class PipelineServiceTest {
                 .dependentPipelineIds(Set.of())
                 .build();
 
-        pipelineService.update("projectId", "id", GRAPH, params, "newName");
+        pipelineService.update("projectId", "id", "newName", params, GRAPH);
 
         verify(argoKubernetesService).createOrReplaceWorkflowTemplate(anyString(), any(WorkflowTemplate.class));
     }
@@ -1138,7 +1112,7 @@ class PipelineServiceTest {
         ConfigMap configMap =
                 new ConfigMapBuilder().withNewMetadata().withName("name").endMetadata().withData(res).build();
         when(argoKubernetesService.getConfigMap(anyString(), anyString())).thenReturn(configMap);
-        when(projectService.getParams(anyString())).thenReturn(ParamsDto.fromSecret(new Secret()).build());
+        when(projectService.getParams(anyString())).thenReturn(ParamUtils.fromSecret(new Secret()).build());
 
         WorkflowTemplate workflowTemplate = new WorkflowTemplate();
         workflowTemplate.setMetadata(new ObjectMetaBuilder()
@@ -1188,7 +1162,7 @@ class PipelineServiceTest {
                 .dependentPipelineIds(Set.of())
                 .build();
 
-        pipelineService.update("projectId", "id", GRAPH, params, "newName");
+        pipelineService.update("projectId", "id", "newName", params, GRAPH);
 
         verify(argoKubernetesService).createOrReplaceWorkflowTemplate(anyString(), any(WorkflowTemplate.class));
     }
@@ -1227,7 +1201,7 @@ class PipelineServiceTest {
                         .name(Constants.DAG_TEMPLATE_NAME)
                         .dag(new DagTemplate()))));
 
-        when(argoKubernetesService.getWorkflowTemplate(anyString(),anyString())).thenReturn(workflowTemplate);
+        when(argoKubernetesService.getWorkflowTemplate(anyString(), anyString())).thenReturn(workflowTemplate);
         when(dependencyHandlerService.pipelineHasDepends(any(WorkflowTemplate.class))).thenReturn(true);
 
         doNothing().when(argoKubernetesService).deleteWorkflowTemplate("projectId", "id");
@@ -1273,7 +1247,7 @@ class PipelineServiceTest {
                 .templates(List.of(new Template()
                         .name(Constants.DAG_TEMPLATE_NAME)
                         .dag(new DagTemplate()))));
-        when(argoKubernetesService.getWorkflowTemplate(anyString(),anyString())).thenReturn(workflowTemplate);
+        when(argoKubernetesService.getWorkflowTemplate(anyString(), anyString())).thenReturn(workflowTemplate);
 
         assertThrows(BadRequestException.class, () -> pipelineService.delete("projectId", "pl1"),
                 "Expected exception must be thrown");
@@ -1283,47 +1257,43 @@ class PipelineServiceTest {
     @Test
     void testRun() {
         mockAuthenticationService();
-        when(argoKubernetesService.getArgoExecutorLimitsCpu()).thenReturn("0.1");
-        when(argoKubernetesService.getArgoExecutorLimitsMemory()).thenReturn("100Mi");
-        when(argoKubernetesService.getArgoExecutorRequestsCpu()).thenReturn("0.1");
-        when(argoKubernetesService.getArgoExecutorRequestsMemory()).thenReturn("50Mi");
         ResourceQuota resourceQuota = new ResourceQuota();
         ResourceQuotaStatus resourceQuotaStatus = new ResourceQuotaStatus();
         resourceQuotaStatus.setHard(Map.of(Constants.LIMITS_CPU,
-                                           Quantity.parse("1"),
-                                           Constants.LIMITS_MEMORY,
-                                           Quantity.parse("1G"),
-                                           Constants.REQUESTS_CPU,
-                                           Quantity.parse("1"),
-                                           Constants.REQUESTS_MEMORY,
-                                           Quantity.parse("1G")));
+                Quantity.parse("1"),
+                Constants.LIMITS_MEMORY,
+                Quantity.parse("1G"),
+                Constants.REQUESTS_CPU,
+                Quantity.parse("1"),
+                Constants.REQUESTS_MEMORY,
+                Quantity.parse("1G")));
         resourceQuota.setStatus(resourceQuotaStatus);
         when(argoKubernetesService.getResourceQuota("projectId", Constants.QUOTA_NAME)).thenReturn(resourceQuota);
         doNothing().when(argoKubernetesService).createOrReplaceWorkflow(eq("projectId"), any(Workflow.class));
         WorkflowTemplate workflowTemplate = new WorkflowTemplate();
         workflowTemplate.setMetadata(new ObjectMetaBuilder()
-                                         .withName("id")
-                                         .addToLabels(Constants.NAME, "name")
-                                         .addToAnnotations(Constants.DEFINITION,
-                                                           Base64.encodeBase64String(GRAPH.toString().getBytes()))
-                                         .addToAnnotations(Constants.LAST_MODIFIED, "lastModified")
-                                         .build());
+                .withName("id")
+                .addToLabels(Constants.NAME, "name")
+                .addToAnnotations(Constants.DEFINITION,
+                        Base64.encodeBase64String(GRAPH.toString().getBytes()))
+                .addToAnnotations(Constants.LAST_MODIFIED, "lastModified")
+                .build());
         DagTemplate dagTemplate = new DagTemplate();
         Arguments task1Args = new Arguments();
         task1Args.setParameters(List.of(new Parameter().name(PipelineService.LIMITS_CPU).value("0.1"),
-                                        new Parameter().name(PipelineService.LIMITS_MEMORY).value("300Mi"),
-                                        new Parameter().name(PipelineService.REQUESTS_CPU).value("0.1"),
-                                        new Parameter().name(PipelineService.REQUESTS_MEMORY).value("300Mi")));
+                new Parameter().name(PipelineService.LIMITS_MEMORY).value("300Mi"),
+                new Parameter().name(PipelineService.REQUESTS_CPU).value("0.1"),
+                new Parameter().name(PipelineService.REQUESTS_MEMORY).value("300Mi")));
         Arguments task2Args = new Arguments();
         task2Args.setParameters(List.of(new Parameter().name(PipelineService.LIMITS_CPU).value("0.1"),
-                                        new Parameter().name(PipelineService.LIMITS_MEMORY).value("100Mi"),
-                                        new Parameter().name(PipelineService.REQUESTS_CPU).value("0.1"),
-                                        new Parameter().name(PipelineService.REQUESTS_MEMORY).value("100Mi")));
+                new Parameter().name(PipelineService.LIMITS_MEMORY).value("100Mi"),
+                new Parameter().name(PipelineService.REQUESTS_CPU).value("0.1"),
+                new Parameter().name(PipelineService.REQUESTS_MEMORY).value("100Mi")));
         dagTemplate.setTasks(List.of(new DagTask().arguments(task1Args).template("test"),
-                                     new DagTask().arguments(task2Args).template("test2")));
+                new DagTask().arguments(task2Args).template("test2")));
         workflowTemplate.setSpec(new WorkflowTemplateSpec().templates(List.of(new Template()
-                                                                                  .name(Constants.DAG_TEMPLATE_NAME)
-                                                                                  .dag(dagTemplate))));
+                .name(Constants.DAG_TEMPLATE_NAME)
+                .dag(dagTemplate))));
         when(argoKubernetesService.getWorkflowTemplate(anyString(), anyString())).thenReturn(workflowTemplate);
         pipelineService.run("projectId", "id");
         verify(argoKubernetesService).createOrReplaceWorkflow(eq("projectId"), any(Workflow.class));
@@ -1333,14 +1303,14 @@ class PipelineServiceTest {
     void testSuspend() throws ApiException {
         WorkflowTemplate workflowTemplate = new WorkflowTemplate();
         workflowTemplate.setMetadata(new ObjectMetaBuilder()
-                                         .withName("id")
-                                         .addToLabels(Constants.NAME, "name")
-                                         .addToAnnotations(Constants.DEFINITION,
-                                                           Base64.encodeBase64String(GRAPH.toString().getBytes()))
-                                         .build());
+                .withName("id")
+                .addToLabels(Constants.NAME, "name")
+                .addToAnnotations(Constants.DEFINITION,
+                        Base64.encodeBase64String(GRAPH.toString().getBytes()))
+                .build());
         workflowTemplate.setSpec(new WorkflowTemplateSpec().templates(List.of(new Template()
-                                                                                  .name(Constants.DAG_TEMPLATE_NAME)
-                                                                                  .dag(new DagTemplate()))));
+                .name(Constants.DAG_TEMPLATE_NAME)
+                .dag(new DagTemplate()))));
         when(argoKubernetesService.getWorkflowTemplate("projectId", "id")).thenReturn(workflowTemplate);
         WorkflowStatus status = new WorkflowStatus();
         status.setPhase("Running");
@@ -1362,14 +1332,14 @@ class PipelineServiceTest {
     void testSuspendFailure() throws ResourceNotFoundException {
         WorkflowTemplate workflowTemplate = new WorkflowTemplate();
         workflowTemplate.setMetadata(new ObjectMetaBuilder()
-                                         .withName("id")
-                                         .addToLabels(Constants.NAME, "name")
-                                         .addToAnnotations(Constants.DEFINITION,
-                                                           Base64.encodeBase64String(GRAPH.toString().getBytes()))
-                                         .build());
+                .withName("id")
+                .addToLabels(Constants.NAME, "name")
+                .addToAnnotations(Constants.DEFINITION,
+                        Base64.encodeBase64String(GRAPH.toString().getBytes()))
+                .build());
         workflowTemplate.setSpec(new WorkflowTemplateSpec().templates(List.of(new Template()
-                                                                                  .name(Constants.DAG_TEMPLATE_NAME)
-                                                                                  .dag(new DagTemplate()))));
+                .name(Constants.DAG_TEMPLATE_NAME)
+                .dag(new DagTemplate()))));
         when(argoKubernetesService.getWorkflowTemplate("projectId", "id")).thenReturn(workflowTemplate);
         WorkflowStatus status = new WorkflowStatus();
         status.setPhase("Running");
@@ -1384,22 +1354,22 @@ class PipelineServiceTest {
         workflow.setSpec(spec);
         when(argoKubernetesService.getWorkflow("projectId", "id")).thenReturn(workflow);
         assertThrows(BadRequestException.class,
-                     () -> pipelineService.suspend("projectId", "id"),
-                     "Expected exception must be thrown");
+                () -> pipelineService.suspend("projectId", "id"),
+                "Expected exception must be thrown");
     }
 
     @Test
     void testResume() throws ApiException {
         WorkflowTemplate workflowTemplate = new WorkflowTemplate();
         workflowTemplate.setMetadata(new ObjectMetaBuilder()
-                                         .withName("id")
-                                         .addToLabels(Constants.NAME, "name")
-                                         .addToAnnotations(Constants.DEFINITION,
-                                                           Base64.encodeBase64String(GRAPH.toString().getBytes()))
-                                         .build());
+                .withName("id")
+                .addToLabels(Constants.NAME, "name")
+                .addToAnnotations(Constants.DEFINITION,
+                        Base64.encodeBase64String(GRAPH.toString().getBytes()))
+                .build());
         workflowTemplate.setSpec(new WorkflowTemplateSpec().templates(List.of(new Template()
-                                                                                  .name(Constants.DAG_TEMPLATE_NAME)
-                                                                                  .dag(new DagTemplate()))));
+                .name(Constants.DAG_TEMPLATE_NAME)
+                .dag(new DagTemplate()))));
         when(argoKubernetesService.getWorkflowTemplate("projectId", "id")).thenReturn(workflowTemplate);
         WorkflowStatus status = new WorkflowStatus();
         status.setPhase(SUSPENDED_STATUS);
@@ -1421,14 +1391,14 @@ class PipelineServiceTest {
     void testStop() throws ApiException {
         WorkflowTemplate workflowTemplate = new WorkflowTemplate();
         workflowTemplate.setMetadata(new ObjectMetaBuilder()
-                                         .withName("id")
-                                         .addToLabels(Constants.NAME, "name")
-                                         .addToAnnotations(Constants.DEFINITION,
-                                                           Base64.encodeBase64String(GRAPH.toString().getBytes()))
-                                         .build());
+                .withName("id")
+                .addToLabels(Constants.NAME, "name")
+                .addToAnnotations(Constants.DEFINITION,
+                        Base64.encodeBase64String(GRAPH.toString().getBytes()))
+                .build());
         workflowTemplate.setSpec(new WorkflowTemplateSpec().templates(List.of(new Template()
-                                                                                  .name(Constants.DAG_TEMPLATE_NAME)
-                                                                                  .dag(new DagTemplate()))));
+                .name(Constants.DAG_TEMPLATE_NAME)
+                .dag(new DagTemplate()))));
         when(argoKubernetesService.getWorkflowTemplate("projectId", "id")).thenReturn(workflowTemplate);
         WorkflowStatus status = new WorkflowStatus();
         Workflow workflow = new Workflow();
@@ -1449,14 +1419,14 @@ class PipelineServiceTest {
     void testTerminate() throws ApiException {
         WorkflowTemplate workflowTemplate = new WorkflowTemplate();
         workflowTemplate.setMetadata(new ObjectMetaBuilder()
-                                         .withName("id")
-                                         .addToLabels(Constants.NAME, "name")
-                                         .addToAnnotations(Constants.DEFINITION,
-                                                           Base64.encodeBase64String(GRAPH.toString().getBytes()))
-                                         .build());
+                .withName("id")
+                .addToLabels(Constants.NAME, "name")
+                .addToAnnotations(Constants.DEFINITION,
+                        Base64.encodeBase64String(GRAPH.toString().getBytes()))
+                .build());
         workflowTemplate.setSpec(new WorkflowTemplateSpec().templates(List.of(new Template()
-                                                                                  .name(Constants.DAG_TEMPLATE_NAME)
-                                                                                  .dag(new DagTemplate()))));
+                .name(Constants.DAG_TEMPLATE_NAME)
+                .dag(new DagTemplate()))));
         when(argoKubernetesService.getWorkflowTemplate("projectId", "id")).thenReturn(workflowTemplate);
         WorkflowStatus status = new WorkflowStatus();
         Workflow workflow = new Workflow();
@@ -1482,14 +1452,14 @@ class PipelineServiceTest {
     void testRetry() throws ApiException {
         WorkflowTemplate workflowTemplate = new WorkflowTemplate();
         workflowTemplate.setMetadata(new ObjectMetaBuilder()
-                                         .withName("id")
-                                         .addToLabels(Constants.NAME, "name")
-                                         .addToAnnotations(Constants.DEFINITION,
-                                                           Base64.encodeBase64String(GRAPH.toString().getBytes()))
-                                         .build());
+                .withName("id")
+                .addToLabels(Constants.NAME, "name")
+                .addToAnnotations(Constants.DEFINITION,
+                        Base64.encodeBase64String(GRAPH.toString().getBytes()))
+                .build());
         workflowTemplate.setSpec(new WorkflowTemplateSpec().templates(List.of(new Template()
-                                                                                  .name(Constants.DAG_TEMPLATE_NAME)
-                                                                                  .dag(new DagTemplate()))));
+                .name(Constants.DAG_TEMPLATE_NAME)
+                .dag(new DagTemplate()))));
         when(argoKubernetesService.getWorkflowTemplate("projectId", "id")).thenReturn(workflowTemplate);
         WorkflowStatus status = new WorkflowStatus();
         Workflow workflow = new Workflow();
@@ -1510,8 +1480,8 @@ class PipelineServiceTest {
     void testCreateCron() {
         CronPipelineDto cronPipelineDto = new CronPipelineDto();
         doNothing()
-            .when(argoKubernetesService)
-            .createOrReplaceCronWorkflow(eq("projectId"), any(CronWorkflow.class));
+                .when(argoKubernetesService)
+                .createOrReplaceCronWorkflow(eq("projectId"), any(CronWorkflow.class));
         pipelineService.createCron("projectId", "id", cronPipelineDto);
         verify(argoKubernetesService).createOrReplaceCronWorkflow(eq("projectId"), any(CronWorkflow.class));
     }
@@ -1530,8 +1500,8 @@ class PipelineServiceTest {
         cronWorkflow.setSpec(new CronWorkflowSpec());
         when(argoKubernetesService.getCronWorkflow("projectId", "id")).thenReturn(cronWorkflow);
         assertEquals(expected.getSchedule(),
-                     pipelineService.getCronById("projectId", "id").getSchedule(),
-                     "Schedule must be equals to expected");
+                pipelineService.getCronById("projectId", "id").getSchedule(),
+                "Schedule must be equals to expected");
     }
 
     @Test
@@ -1594,7 +1564,7 @@ class PipelineServiceTest {
                 .addToAnnotations(Constants.LAST_MODIFIED, "lastModified")
                 .build());
 
-        JsonNode response = dependencyHandlerService.getDefinition(workflowTemplate);
+        JsonNode response = DependencyHandlerService.getPipelineDefinition(workflowTemplate);
         assertEquals(GRAPH, response, "Name must be equals to expected");
     }
 
@@ -1609,7 +1579,7 @@ class PipelineServiceTest {
                         Base64.encodeBase64String("test".getBytes()))
                 .addToAnnotations(Constants.LAST_MODIFIED, "lastModified")
                 .build());
-        assertThrows(JsonParseException.class, () -> dependencyHandlerService.getDefinition(workflowTemplate),
+        assertThrows(JsonParseException.class, () -> DependencyHandlerService.getPipelineDefinition(workflowTemplate),
                 "Expected exception must be thrown");
     }
 
@@ -1681,6 +1651,135 @@ class PipelineServiceTest {
     private void mockAuthenticationService() {
         UserInfo ui = new UserInfo();
         ui.setSuperuser(true);
-        when(authenticationService.getUserInfo()).thenReturn(ui);
+        ui.setUsername("test");
+        when(authenticationService.getUserInfo()).thenReturn(Optional.of(ui));
+    }
+
+    @Test
+    void testCopy() {
+        WorkflowTemplate workflowTemplate1 = new WorkflowTemplate();
+        workflowTemplate1.setMetadata(new ObjectMetaBuilder()
+                .withName("pipelineId1")
+                .addToLabels(Constants.NAME, "pipelineName1")
+                .addToAnnotations(Constants.DEFINITION,
+                        Base64.encodeBase64String("GRAPH".getBytes()))
+                .addToAnnotations(Constants.LAST_MODIFIED, "lastModified")
+                .build());
+        workflowTemplate1.setSpec(new WorkflowTemplateSpec().templates(List.of(new Template()
+                        .name("dagTemplate")
+                        .dag(new DagTemplate().addTasksItem(
+                                new DagTask().arguments(new Arguments()
+                                        .addParametersItem(
+                                                new Parameter()
+                                                        .name(
+                                                                K8sUtils.CONFIGMAP)
+                                                        .value(
+                                                                "jobFromPipeline")))))))
+                .pipelineParams(
+                        PipelineParams.builder()
+                                .tags(Arrays.asList("VF-Demo", "VF-Migration"))
+                                .slack(SlackNotification.builder()
+                                        .successNotify(false)
+                                        .failureNotify(false)
+                                        .channels(List.of())
+                                        .recipients(List.of())
+                                        .build())
+                                .email(EmailNotification.builder()
+                                        .successNotify(false)
+                                        .failureNotify(false)
+                                        .recipients(List.of())
+                                        .build())
+                                .dependentPipelineIds(Set.of("pipelineId"))
+                                .build()
+                )
+        );
+        WorkflowTemplate workflowTemplate2 = new WorkflowTemplate();
+        workflowTemplate2.setMetadata(new ObjectMetaBuilder()
+                .withName("pipelineId2")
+                .addToLabels(Constants.NAME, "pipelineName1-Copy")
+                .addToAnnotations(Constants.DEFINITION,
+                        Base64.encodeBase64String("GRAPH".getBytes()))
+                .addToAnnotations(Constants.LAST_MODIFIED, "lastModified")
+                .build());
+        workflowTemplate2.setSpec(new WorkflowTemplateSpec().templates(List.of(new Template()
+                        .name("dagTemplate")
+                        .dag(new DagTemplate().addTasksItem(
+                                new DagTask().arguments(new Arguments()
+                                        .addParametersItem(
+                                                new Parameter()
+                                                        .name(
+                                                                K8sUtils.CONFIGMAP)
+                                                        .value(
+                                                                "jobFromPipeline")))))))
+                .pipelineParams(
+                        PipelineParams.builder()
+                                .tags(Arrays.asList("VF-Demo", "VF-Migration"))
+                                .slack(SlackNotification.builder()
+                                        .successNotify(false)
+                                        .failureNotify(false)
+                                        .channels(List.of())
+                                        .recipients(List.of())
+                                        .build())
+                                .email(EmailNotification.builder()
+                                        .successNotify(false)
+                                        .failureNotify(false)
+                                        .recipients(List.of())
+                                        .build())
+                                .dependentPipelineIds(Set.of())
+                                .build()
+                ));
+
+        WorkflowTemplate workflowTemplate3 = new WorkflowTemplate();
+        workflowTemplate3.setMetadata(new ObjectMetaBuilder()
+                .withName("pipelineId3")
+                .addToLabels(Constants.NAME, "pipelineName1-Copy2")
+                .addToAnnotations(Constants.DEFINITION,
+                        Base64.encodeBase64String("GRAPH".getBytes()))
+                .addToAnnotations(Constants.LAST_MODIFIED, "lastModified")
+                .build());
+        workflowTemplate3.setSpec(new WorkflowTemplateSpec().templates(List.of(new Template()
+                        .name("dagTemplate")
+                        .dag(new DagTemplate().addTasksItem(
+                                new DagTask().arguments(new Arguments()
+                                        .addParametersItem(
+                                                new Parameter()
+                                                        .name(
+                                                                K8sUtils.CONFIGMAP)
+                                                        .value(
+                                                                "jobFromPipeline")))))))
+                .pipelineParams(
+                        PipelineParams.builder()
+                                .tags(Arrays.asList("VF-Demo", "VF-Migration"))
+                                .slack(SlackNotification.builder()
+                                        .successNotify(false)
+                                        .failureNotify(false)
+                                        .channels(List.of())
+                                        .recipients(List.of())
+                                        .build())
+                                .email(EmailNotification.builder()
+                                        .successNotify(false)
+                                        .failureNotify(false)
+                                        .recipients(List.of())
+                                        .build())
+                                .dependentPipelineIds(Set.of("pipelineId"))
+                                .build()
+                ));
+        List<WorkflowTemplate> workflowTemplates = new ArrayList<>();
+        workflowTemplates.add(workflowTemplate1);
+        when(argoKubernetesService.getAllWorkflowTemplates(anyString())).thenReturn(workflowTemplates);
+
+        for (WorkflowTemplate wf : List.of(workflowTemplate2, workflowTemplate3)) {
+            WorkflowTemplate original = SerializationUtils.clone(workflowTemplate1);
+            when(argoKubernetesService.getWorkflowTemplate("projectId", original.getMetadata().getName()))
+                    .thenReturn(original);
+            pipelineService.copy("projectId", original.getMetadata().getName());
+            assertEquals(wf.getMetadata().getLabels().get(Constants.NAME),
+                    original.getMetadata().getLabels().get(Constants.NAME),
+                    "Copy suffix should be exactly the same");
+            assertNotEquals(wf.getMetadata().getName(),
+                    original.getMetadata().getName(),
+                    "Ids should be different");
+            workflowTemplates.add(wf);
+        }
     }
 }
